force-app/main/default/objects/FNS_ProductType__c/FNS_ProductType__c.object-meta.xml
<CustomObject>
    <label>Product Type</label>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>