force-app/main/default/objects/FNS_ProductType__c/fields/FNS_DMLType__c.field-meta.xml
<CustomField>
    <fullName>FNS_DMLType__c</fullName>
    <label>DML Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>