force-app/main/default/objects/FNS_ProductType__c/fields/FNS_HierarchyIndicator__c.field-meta.xml
<CustomField>
    <fullName>FNS_HierarchyIndicator__c</fullName>
    <label>Hierarchy Indicator</label>
    <length>25</length>
    <type>Text</type>
</CustomField>