force-app/main/default/objects/FNS_ProductType__c/fields/FNS_ProductTypeExternalId__c.field-meta.xml
<CustomField>
    <fullName>FNS_ProductTypeExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Product Type Ext Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>