force-app/main/default/objects/FNS_ProductType__c/recordTypes/FNS_ProductType.recordType-meta.xml
<RecordType>
    <fullName>FNS_ProductType</fullName>
    <active>true</active>
    <label>Product Type</label>
</RecordType>