force-app/main/default/objects/FNS_ProductType__c/listViews/FNS_ProductType.listView-meta.xml
<ListView>
    <fullName>FNS_ProductType</fullName>
    <columns>NAME</columns>
    <columns>FNS_Description__c</columns>
    <columns>FNS_HierarchyIndicator__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Product Types</label>
</ListView>